fixed gap between menu and calendar

--- a/css/app.css
+++ b/css/app.css
@@ -292,7 +292,7 @@ button.main:hover {
 
 #dashboardMenu {
     height: 100%;
-    width: 19.8vw;
+    width: 20vw;
     display: inline-block;
     text-align: center;
     border-right-style: solid;
